# eindhoven-event-adder

./: .gitignore  README.md  event_app.py  package-lock.json  package.json  scraper_service.py
python/: event_app.py
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/cache/: events_cache.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  dontuse_scraper.rs  lib.rs  main.rs  models.rs  scraper.rs
src-tauri/src/scraper/: mod.rs  parsers.rs  utils.rs
src/components/: CustomEventMapMarker.tsx  EventActionsFooter.tsx  EventCalendar.tsx  EventContentSections.tsx  EventDetail.tsx  EventDetailOverlay.tsx  EventHero.tsx  EventInfoGrid.tsx  EventList.tsx  EventListItem.tsx  EventMap.tsx  FilterOverlay.tsx  Icons.tsx  MiniMap.tsx  ScrapingOverlay.tsx  ThemeToggle.tsx
src/utils/: dateUtils.ts
