[package]
name = "eindhoven-event-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "eindhoven_event_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2.0.0-beta" # Keep for opening external links
tauri-plugin-dialog = "2.0.0-beta" # Keep for save dialog
tauri-plugin-fs = "2.0.0-beta.7"   # Add for writing files (ICS)

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] } # For date/time handling
regex = "1.11.1" # For regular expressions, useful for parsing text

# --- New Crates for Rust Backend Logic ---
reqwest = { version = "0.12", features = ["json", "blocking"] } # HTTP client; using "blocking" for simplicity in command handlers
scraper = "0.23.1" # HTML parsing, similar to Python's BeautifulSoup
log = "0.4" # For logging within Rust, useful for debugging
env_logger = "0.11" # To actually see the log messages
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Async runtime, reqwest might need it
uuid = { version = "1", features = ["v4", "serde"] } # For generating unique IDs for events
url = "2.5.4" # For URL parsing and validation
tauri-plugin-opener = "2"

    

    